@@ -2,12 +2,17 @@ package com.neki.gerenciador.service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
+import com.neki.gerenciador.dto.EventoCadastroDto;
 import com.neki.gerenciador.dto.EventoDto;
+import com.neki.gerenciador.model.Administrador;
 import com.neki.gerenciador.model.Evento;
+import com.neki.gerenciador.repository.AdministradorRepository;
 import com.neki.gerenciador.repository.EventoRepository;
 
 @Service
@@ -16,43 +21,64 @@ public class EventoService {
 	@Autowired
 	private EventoRepository repositorio;
 	
-	public List<EventoDto> listarTodos() {
-		return repositorio.findAll().stream().map(EventoDto::toDto).toList();
+	@Autowired
+	private AdministradorRepository adminRepositorio;
+	
+	public List<EventoDto> listarEventos(String emailAdmin) {
+	    Administrador admin = adminRepositorio.findByEmail(emailAdmin)
+	            .orElseThrow(() -> new RuntimeException("Administrador não encontrado"));
+	    return repositorio.findByAdmin(admin).stream()
+	            .map(EventoDto::toDto)
+	            .collect(Collectors.toList());
 	}
 	
-	public EventoDto salvarEvento(EventoDto eventoDto) {
+	public EventoDto salvarEvento(EventoCadastroDto eventoDto) {
+		String emailAdmin = SecurityContextHolder.getContext().getAuthentication().getName();
+		
+		Administrador adminEmail = adminRepositorio.findByEmail(emailAdmin)
+	            .orElseThrow(() -> new RuntimeException("Usuário não encontrado"));
+		
+		Administrador admin = adminRepositorio.findById(adminEmail.getId())
+				.orElseThrow(() -> new RuntimeException("Usuário não encontrado"));
+		
 		Evento novoEvento = new Evento();
-		novoEvento.setId(eventoDto.id());
 		novoEvento.setNome(eventoDto.nome());
-		novoEvento.setData(eventoDto.data());
-		novoEvento.setLocal(eventoDto.local());
+		novoEvento.setDataEvento(eventoDto.data_evento());
+		novoEvento.setLocalizacao(eventoDto.localizacao());
 		novoEvento.setImagem(eventoDto.imagem());
+		novoEvento.setAdmin(admin);
 		
 		Evento eventoSalvo = repositorio.save(novoEvento);
 		return EventoDto.toDto(eventoSalvo);
 	}
 	
-	public Optional<EventoDto> alterarEvento(Long id, EventoDto eventoDto){
+	public Optional<EventoDto> alterarEvento(Long id, EventoCadastroDto eventoDto){
 		if(!repositorio.existsById(id)) {
 			return Optional.empty();
 		}
 		
 		Evento evento = repositorio.findById(id).get();
 		evento.setNome(eventoDto.nome());
-		evento.setData(eventoDto.data());
-		evento.setLocal(eventoDto.local());
+		evento.setDataEvento(eventoDto.data_evento());
+		evento.setLocalizacao(eventoDto.localizacao());
 		evento.setImagem(eventoDto.imagem());
 		
 		Evento eventoAlterado = repositorio.save(evento);
 		return Optional.of(EventoDto.toDto(eventoAlterado));
 	}
 	
-	public boolean deletarEvento(Long id) {
-		if(!repositorio.existsById(id)) {
-			return false;
-		}
-		repositorio.deleteById(id);
-		return true;
-	}
+	public boolean deletarEvento(Long eventoId, String emailAdmin) {
+	    Administrador admin = adminRepositorio.findByEmail(emailAdmin)
+	            .orElseThrow(() -> new RuntimeException("Administrador não encontrado"));
 
+	    Evento evento = repositorio.findById(eventoId)
+	            .orElseThrow(() -> new RuntimeException("Evento não encontrado"));
+
+	    if (!evento.getAdmin().equals(admin)) {
+	        throw new RuntimeException("Acesso negado");
+	    }
+
+	    repositorio.delete(evento);
+	    return true;
+	}
 }
